crates/wsh-parser/tests/snapshots/integration__bad_i32.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global i32 i32.const 3086810364
1: global i32 i32.const 0


