crates/wsh-parser/tests/snapshots/integration__complex_init.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global f32 f32.const 0


