crates/wsh-parser/tests/snapshots/integration__data.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
datas
---
0: data at i32.const 10: bytes: [0, 1, 2, 3, 4]
1: data: bytes: [0, 1, 2, 3, 4]
2: data at i32.const 10: bytes: [0, 1, 2, 3, 4]


