crates/wsh-parser/tests/snapshots/integration__f32_init_expr.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global f32 f32.const 0.000000000000000000000000000000000000000091624


