crates/wsh-parser/tests/snapshots/integration__f64_const.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global mut f64 f64.const 10


